--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
-    "start:nodemon": "nodemon -r dotenv/config src/server.js"
+    "start": "node dist/server.js",
+    "start:dev": "nodemon src/server.js",
+    "start:prod": "webpack --mode=production && npm run start"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
   },
   "homepage": "https://github.com/Gerasik/simple-crud-api#readme",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
