--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "node dist/server.js",
     "start:dev": "nodemon src/server.js",
     "start:prod": "webpack --mode=production && npm run start"
@@ -21,7 +22,9 @@
   },
   "homepage": "https://github.com/Gerasik/simple-crud-api#readme",
   "devDependencies": {
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
   },
